After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781244 - month-view: selection of columns is lost when creating multiple day event via drag
month-view: selection of columns is lost when creating multiple day event via...
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: Views
unspecified
Other Linux
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-13 02:11 UTC by Mohammed Sadiq
Modified: 2017-04-13 09:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Calendar new event (video) (42.86 KB, video/webm)
2017-04-13 02:11 UTC, Mohammed Sadiq
  Details
month-view: don't cancel selection on date change (799 bytes, patch)
2017-04-13 09:57 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Mohammed Sadiq 2017-04-13 02:11:46 UTC
Created attachment 349757 [details]
Calendar new event (video)

When creating a multiple day event by selecting columns via drag, the selection is lost when the quick add popover is shown. This happens only in month view.

This regression appeared after the active-date rework. That is, after the commit aa5b963

Please see the attached screencast.

Thanks
Comment 1 Georges Basile Stavracas Neto 2017-04-13 09:57:16 UTC
Created attachment 349773 [details] [review]
month-view: don't cancel selection on date change
Comment 2 Georges Basile Stavracas Neto 2017-04-13 09:58:41 UTC
Attachment 349773 [details] pushed as e26648a - month-view: don't cancel selection on date change