month-view: don't cancel selection on date change

https://bugzilla.gnome.org/show_bug.cgi?id=781244